# Buddy-Bot

./: .gitignore  AStar.cpp  AStar.h  BuddyBot.pro  Hello.pro  Makefile  README.md  hazle  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movement.hpp  pwm  rot_enc_c  test
VoiceControl/: stt.cpp  stt.h  voicecontrol.pro
VoiceControl/audio/: audio_buffer.c  pa_list_devices.h  wav_io.c
VoiceControl/model/: buddybot_private.scorer  buddybot_private_model_0.2.md
VoiceControl/test/: stt_function_test.cpp
VoiceControl_server/: CMakeLists.txt  stt.cpp  stt.h
VoiceControl_server/audio/: audio_buffer.h  pa_list_devices.c  wav_io.h
VoiceControl_server/model/: buddybot_general.scorer  buddybot_private.tflite
demo/: Makefile  main.cpp
doc/: Lidar.MD  motorControl.md  movecontrol.md  uwb.md  voicecontrol.md
follow/: .clang-format  CMakeLists.txt  ULM3_AcquisitionCallback.h  ULM3_DataAcquisition.cpp  ULM3_PDOAComm.cpp  ULM3_PDOAComm.h  ULM3_printer.cpp  a.out  kalman_filter.cpp  kalman_filter.h  semaphore.cpp  semaphore.h  sync_queue.h  test.cpp  test_callback.cpp  test_filter.cpp  test_follow.cpp  test_queue.cpp  ubw.cpp  ulm3_acquisition_callback.cpp  ulm3_acquisition_callback.h  ulm3_pdoa_comm.cpp  ulm3_pdoa_comm.h  ulm3_samples.cpp  ulm3_samples.h
follow/test/: test_callback.cpp  test_filter.cpp  test_queue.cpp
motorControl/: motorDriver.cpp  motorDriver.hpp  movement.cpp  movement.hpp  pwm.cpp  pwm.hpp  test.cpp
motorControl/test/: test.cpp
motorDriver/: encoder.c  encoder.cpp  encoder.h  motorDriver.cpp  motorDriver.h  pwm.cpp  pwm.h  test.c  test.cpp
movecontrol/: movecontrol.cpp  movecontrol.h
rplidar/dataunpacker/: dataunnpacker_commondef.h
utils/: semaphore.cpp  semaphore.h
voicecontrol/: voicecontrol.cpp  voicecontrol.h
(+13 files in other folders)
